FR Translation for after death page (2)

--- a/translations/ghost.fr.xlf
+++ b/translations/ghost.fr.xlf
@@ -1404,7 +1404,7 @@
       </notes>
       <segment>
         <source>Das Leben nach dem Tod</source>
-        <target>Das Leben nach dem Tod</target>
+        <target>La vie après la mort</target>
       </segment>
     </unit>
     <unit id="s0KqeMJ" name="Meine Seele ansehen">
