EN Translation for "life after death" line

--- a/translations/ghost.en.xlf
+++ b/translations/ghost.en.xlf
@@ -1429,7 +1429,7 @@
       </notes>
       <segment>
         <source>Das Leben nach dem Tod</source>
-        <target>Das Leben nach dem Tod</target>
+        <target>Life after death</target>
       </segment>
     </unit>
     <unit id="s0KqeMJ" name="Meine Seele ansehen">
