--- a/translations/admin.es.xlf
+++ b/translations/admin.es.xlf
@@ -160,7 +160,7 @@
       </notes>
       <segment>
         <source>Derzeitiges Leben</source>
-        <target>Vida actual</target>
+        <target>Incarnación actual</target>
       </segment>
     </unit>
     <unit id="XspCSk2" name="TOD NICHT BESTÄTIGT">
@@ -2806,7 +2806,7 @@
       </notes>
       <segment>
         <source>Entkoppelte Leben</source>
-        <target>Entkoppelte Leben</target>
+        <target>Incarnaciones desvinculadas</target>
       </segment>
     </unit>
     <unit id="TLxPMB8" name="Entkoppeln">
