FR Translation for the donation line

--- a/translations/ghost.fr.xlf
+++ b/translations/ghost.fr.xlf
@@ -1422,7 +1422,7 @@
       </notes>
       <segment>
         <source>Spendenseite aufrufen</source>
-        <target>Spendenseite aufrufen</target>
+        <target>Consulter la page des dons</target>
       </segment>
     </unit>
     <unit id="lrar0xr" name="Willkommen in der Hölle!">
