EN Translation for the donation line

--- a/translations/ghost.en.xlf
+++ b/translations/ghost.en.xlf
@@ -1447,7 +1447,7 @@
       </notes>
       <segment>
         <source>Spendenseite aufrufen</source>
-        <target>Spendenseite aufrufen</target>
+        <target>Go to the donation page</target>
       </segment>
     </unit>
     <unit id="lrar0xr" name="Willkommen in der Hölle!">
