Es translation : correction of commit for house improvment title in town administration panel

--- a/translations/admin.es.xlf
+++ b/translations/admin.es.xlf
@@ -3067,7 +3067,7 @@
       </notes>
       <segment>
         <source>Hausverbesserungen:</source>
-        <target>Hausverbesserungen:</target>
+        <target>Mejoras de la casa:</target>
       </segment>
     </unit>
     <unit id="hiqEnyg" name="Teleportieren:">
