ES translation for progression of town building setting in administration interface

--- a/translations/admin.es.xlf
+++ b/translations/admin.es.xlf
@@ -3031,7 +3031,7 @@
       </notes>
       <segment>
         <source>Baufortschritt setzen:</source>
-        <target>Baufortschritt setzen:</target>
+        <target>Establecer el progreso de la construcción:</target>
       </segment>
     </unit>
     <unit id="C0IagjD" name="Integrität setzen:">
