ES translation for empty town ranking list

--- a/translations/global.es.xlf
+++ b/translations/global.es.xlf
@@ -2594,7 +2594,7 @@
       </notes>
       <segment>
         <source>Es wurde noch keine Stadt in die Rangliste aufgenommen!</source>
-        <target>Es wurde noch keine Stadt in die Rangliste aufgenommen!</target>
+        <target>¡Todavía no hay ningún pueblo en la clasificación!</target>
       </segment>
     </unit>
     <unit id="qplNLmy" name="Bitte wähle die Art der Beschränkung.">
